--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
+  transition: 0.3s ease-in-out;
+}
+.card {
+  @apply bg-bg-card dark:bg-darkbg-card  text-center py-6 rounded before:content-[''] before:h-1 before:w-full  relative before:absolute before:top-0 before:left-0 overflow-hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.card-sm {
+  @apply bg-bg-card dark:bg-darkbg-card text-center py-6 px-4 rounded;
 }
